--- a/cdn/css/main.css
+++ b/cdn/css/main.css
@@ -95,7 +95,7 @@ a:hover {
 -------------------------*/
 
 /*-----------------------
-  Header starts
+  Website 1 starts
 -------------------------*/
 
 ._hero_1_root_wrapper {
@@ -374,5 +374,205 @@ a:hover {
 ------------------*/
 
 /*-----------------------
-  Header ends
+    Collaboration start
+-------------------------*/
+
+._collab_1_root_sec {
+  padding: 80px 0 0;
+}
+
+._collab_1_root_title {
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: var(--color);
+}
+
+._collab_1_root_txt {
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--color2);
+  margin: 12px 0 0;
+}
+
+._collab_1_root_card1_ic_wrap {
+  max-width: 57px;
+  background: #d7ecff;
+  border-radius: 10px;
+  padding: 16px;
+}
+
+._collab_1_root_card2_ic_wrap {
+  max-width: 57px;
+  background: #f9edc4;
+  border-radius: 10px;
+  padding: 16px;
+}
+
+._collab_1_root_card3_ic_wrap {
+  max-width: 57px;
+  background: #c0dcda;
+  border-radius: 10px;
+  padding: 16px;
+}
+
+._collab_1_root_card_con {
+  margin: 30px 0 0;
+}
+
+._collab_1_root_card_wrap {
+  margin: 50px 0 0;
+}
+
+._collab_1_root_card {
+  border: 1.2px solid #eae9f0;
+  box-sizing: border-box;
+  border-radius: 12px;
+  transition: 0.2s all ease;
+  margin: 20px 0;
+  height: calc(100% - 30px);
+}
+
+._collab_1_root_card:hover {
+  background: #ffffff;
+  box-shadow: 0px 50px 80px -10px rgba(0, 4, 19, 0.06);
+  border: 1.2px solid transparent;
+}
+
+._collab_1_root_card_inner {
+  padding: 40px;
+}
+
+._collab_1_root_card_con_title {
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 25px;
+  letter-spacing: -0.02em;
+  color: #192140;
+  margin: 0 0 15px;
+}
+
+._collab_1_root_card_con_txt {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4;
+  letter-spacing: -0.01em;
+  color: var(--color2);
+  margin: 15px 0 24px;
+}
+
+._collab_1_root_card_con_link {
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  color: #9ea2b1;
+}
+
+._collab_1_root_card_con_link:hover {
+  color: #3e62fe !important;
+}
+
+._collab_1_root_card_con_link svg {
+  margin-left: 5px;
+}
+
+._collab_1_root_card_con_link svg path {
+  transition: 0.2s all ease;
+}
+
+._collab_1_root_card_con_link:hover svg path {
+  fill: #3e62fe;
+}
+
+/*--------------
+  Responsive
+---------------*/
+
+/* Desktop/Laptop */
+
+@media only screen and (max-width: 1500px) {
+}
+
+@media (max-width: 1399px) {
+}
+
+/* Desktop/Laptop */
+
+/* Ipad pro */
+
+@media only screen and (max-width: 1199px) {
+  ._collab_1_root_card_inner {
+    padding: 30px;
+  }
+}
+
+/* Ipad pro */
+
+@media only screen and (max-width: 991px) {
+  ._collab_1_root_title {
+    font-size: 44px;
+  }
+  ._collab_1_root_card {
+    max-width: 90%;
+    margin: 20px auto;
+  }
+}
+
+/* Ipad pro */
+
+/* Ipad/Mobile L */
+
+@media only screen and (max-width: 767px) {
+  ._collab_1_root_card {
+    max-width: 70%;
+  }
+}
+
+/* Ipad/Mobile L */
+
+/* Mobile */
+
+@media only screen and (max-width: 575px) {
+  ._collab_1_root_title {
+    font-size: 38px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  ._collab_1_root_title {
+    font-size: 32px;
+  }
+  ._collab_1_root_card {
+    max-width: 90%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  ._collab_1_root_card {
+    max-width: 100%;
+  }
+}
+
+/* Mobile */
+
+/*------------------
+  Responsive Ends
+------------------*/
+
+/*-----------------------
+  Collaboration ends
+-------------------------*/
+
+/*-----------------------
+  Website 1 ends
 -------------------------*/
