--- a/cdn/css/main.css
+++ b/cdn/css/main.css
@@ -961,7 +961,7 @@ Website 2 started
   color: #3d85ff;
 }
 .navbar-light .navbar-nav .nav-link {
-  color: #1f3428 !important;
+  color: #1f3428;
 }
 #navbarDropdown1 {
   color: #3d85ff !important;
@@ -1522,6 +1522,251 @@ Website 2 started
 }
 /*feature_2 aihut section end*/
 
+/*pricing aihut section*/
+._pricing_1_aihut_wrapper {
+  margin: 70px 0 96px;
+}
+._pricing_1_aihut_cont_t {
+  font-family: PlusJakartaDisplay;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 1.2;
+  text-align: center;
+  color: #001f0e;
+  position: relative;
+  max-width: 46%;
+  margin: 0 auto 14px;
+}
+._pricing_1_aihut_cont_t::before {
+  position: absolute;
+  content: "";
+  background-image: url("../../assets/img/pricing/pricing-lft-ellipse.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 38px;
+  height: 38px;
+  top: -21px;
+  left: 0;
+}
+._pricing_1_aihut_cont_t::after {
+  position: absolute;
+  content: "";
+  background-image: url("../../assets/img/pricing/pricing-right-ellipse.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 24px;
+  height: 24px;
+  top: 10px;
+  right: 19px;
+}
+._pricing_1_aihut_cont_p {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  color: #808f87;
+  margin: 0 0 52px;
+}
+._pricing_1_aihut_crd {
+  margin: 20px 0;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  box-sizing: border-box;
+  border-radius: 14px;
+  padding: 48px 24px 50px 30px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd:hover {
+  background: #fafbfa;
+  border-color: transparent;
+}
+._pricing_1_aihut_crd_info_t {
+  font-family: PlusJakartaDisplay;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.2;
+  color: #3d85ff;
+  margin: 0 0 10px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_info_p {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  color: #808f87;
+  margin: 0 0 26px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_info_a {
+  border: 1px solid #ff7752;
+  box-sizing: border-box;
+  border-radius: 6px;
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  color: #ff7752;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.2s all ease;
+  width: 141px;
+  height: 44px;
+  margin: 0 0 20px;
+}
+._pricing_1_aihut_crd_info_a:hover {
+  border-color: transparent;
+  background: #3d85ff;
+  color: #fff;
+}
+._pricing_1_aihut_crd_info_pr {
+  display: flex;
+  align-items: center;
+  margin: 0 0 8px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_info_pr_p1 {
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #001f0e;
+  margin: 0 14px 0 0;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_info_pr_p2 {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #808f87;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_info_p1 {
+  font-family: Inter;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #a2a8a5;
+  margin: 0 0 12px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_feat {
+  border-top: 1px solid #d9dddb;
+  margin: 20px 0 0;
+  padding: 36px 0 0;
+  min-height: 280px;
+  transition: 0.2s all ease;
+}
+._pricing_1_aihut_crd_feat_li {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #808f87;
+  margin: 0 0 14px;
+  transition: 0.2s all ease;
+  list-style-type: none;
+}
+._pricing_1_aihut_crd_feat_li svg {
+  margin: 0 13px 0 0;
+  transition: 0.2s all ease;
+}
+/* responsive css */
+/* Desktop/Laptop */
+@media only screen and (min-width: 1600px) {
+}
+@media (max-width: 1399px) {
+  ._pricing_1_aihut_crd_feat_li svg {
+    margin: 0 8px 0 0;
+  }
+  ._pricing_1_aihut_crd_feat_li {
+    font-size: 14px;
+  }
+}
+/* Desktop/Laptop */
+@media only screen and (max-width: 1199px) {
+  ._pricing_1_aihut_cont_t {
+    max-width: 64%;
+  }
+  ._pricing_1_aihut_crd {
+    padding: 48px 20px 50px 25px;
+  }
+  ._pricing_1_aihut_crd_feat_li svg {
+    margin: 0 5px 0 0;
+  }
+  ._pricing_1_aihut_crd_feat_li {
+    font-size: 12px;
+  }
+}
+/* Ipad pro */
+@media only screen and (max-width: 991px) {
+  ._pricing_1_aihut_cont_t {
+    max-width: 86%;
+  }
+  ._pricing_1_aihut_cont_p {
+    margin: 0 0 44px;
+  }
+}
+/* Ipad/Mobile L */
+@media only screen and (max-width: 767px) {
+  ._pricing_1_aihut_wrapper {
+    margin: 50px 0 70px;
+  }
+  ._pricing_1_aihut_cont_t {
+    max-width: 100%;
+    font-size: 37px;
+  }
+  ._pricing_1_aihut_crd {
+    padding: 34px 14px 10px;
+  }
+  ._pricing_1_aihut_crd_info_t {
+    font-size: 26px;
+  }
+  ._pricing_1_aihut_crd_info_a {
+    font-size: 14px;
+    width: 120px;
+    height: 40px;
+  }
+  ._pricing_1_aihut_crd_feat_li {
+    font-size: 10px;
+  }
+  ._pricing_1_aihut_crd_feat_li svg {
+    margin: 0 2px 0 0;
+  }
+}
+/* Mobile */
+@media only screen and (max-width: 575px) {
+  ._pricing_1_aihut_cont_t {
+    font-size: 33px;
+  }
+  ._pricing_1_aihut_cont_t::before,
+  ._pricing_1_aihut_cont_t::after {
+    display: none;
+  }
+}
+@media only screen and (max-width: 420px) {
+  ._pricing_1_aihut_cont_t {
+    font-size: 26px;
+  }
+  ._pricing_1_aihut_cont_p {
+    font-size: 14px;
+    margin: 0 0 24px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  ._pricing_1_aihut_wrapper {
+    margin: 30px 0 50px;
+  }
+  ._pricing_1_aihut_cont_t {
+    font-size: 23px;
+  }
+}
+/*pricing aihut section end*/
+
 /*footer aihut section*/
 ._footer_2_aihut_wrapper {
   background: #001f0e;
@@ -1695,3 +1940,313 @@ Website 2 started
 /* 
 Website 2 ended  
 */
+
+/* 
+Website 3 started 
+*/
+
+/* header start */
+
+._header_3_meeting_wrapper {
+  background-color: #4e7cff;
+}
+
+._header_3_meeting_inner_wrap {
+  position: relative;
+  z-index: 1;
+  padding: 70px 0;
+}
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+._logo {
+  display: inline-block;
+  width: auto;
+  margin: 4px 0 0;
+}
+
+._header_3_meeting_navbar {
+  background: transparent;
+}
+
+._header_3_meeting_nav_item_wrap {
+  margin: 0 20px;
+}
+
+._header_3_meeting_nav_item {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  color: #dbe4ff;
+}
+
+._header_3_meeting_nav_item._active {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #ffffff !important;
+}
+
+._header_3_meeting_nav_item:hover {
+  color: #ffffff;
+}
+
+._header_3_meeting_nav_ul {
+  margin-left: 0;
+  text-align: center;
+}
+
+._header_3_meeting_nav_right_ul {
+  align-items: center;
+  margin-left: auto;
+}
+
+._log_in {
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: center;
+  color: #ffffff !important;
+  border: 1px solid #a3bafb;
+  box-sizing: border-box;
+  border-radius: 6px;
+  width: 112px;
+  padding: 11px 30px;
+  margin-right: 10px;
+}
+
+._log_in:hover {
+  background: #dbe4ff;
+  color: #060a15 !important;
+}
+
+._sign_up {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: center;
+  color: #ffffff !important;
+  background: #060a15;
+  border-radius: 6px;
+  width: 112px;
+  padding: 11px 30px;
+}
+
+._sign_up:hover {
+  background: #dbe4ff !important;
+  color: #060a15 !important;
+}
+
+._header_3_meeting_left_title {
+  font-family: Montserrat;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.3;
+  color: #ffffff;
+}
+
+._header_3_meeting_left_txt {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #dbe4ff;
+  max-width: 80%;
+  margin: 18px 0 40px;
+}
+
+._header_3_meeting_btn1 {
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  color: #4e7cff;
+  background: #ffffff;
+  border-radius: 6px;
+  width: 200px;
+  padding: 15px 50px;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+._header_3_meeting_btn1::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  transition: 0.2s all ease;
+  background: #131e40;
+}
+
+._header_3_meeting_btn1:hover {
+  color: #ffffff;
+}
+
+._header_3_meeting_btn1:hover._header_3_meeting_btn1::before {
+  width: 100%;
+}
+
+._header_3_meeting_btn2 {
+  background: transparent;
+  border: none;
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 30px;
+}
+
+._header_3_meeting_btn2_ic {
+  width: 56px;
+  height: 56px;
+  background: #ffffff;
+  display: flex;
+  position: relative;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  margin-right: 20px;
+}
+
+._header_3_meeting_btn2_ic::before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background: #4e7cff;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  transition: 0.2s all ease;
+}
+
+._header_3_meeting_btn2_ic:hover._header_3_meeting_btn2_ic::before {
+  width: 100%;
+  height: 100%;
+}
+
+._header_3_meeting_btn_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+._header_3_meeting_btm_txt {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #dbe4ff;
+  margin: 16px 0 0;
+}
+
+._header_3_meeting_right_abs {
+  position: absolute;
+  width: auto;
+  bottom: 0;
+  right: -100px;
+  z-index: -1;
+}
+
+/* responsive css */
+/* Desktop/Laptop */
+@media only screen and (max-width: 1500px) {
+}
+
+@media (max-width: 1399px) {
+  ._header_3_meeting_right_abs {
+    max-width: 60%;
+  }
+}
+
+/* Desktop/Laptop */
+@media only screen and (max-width: 1199px) {
+  ._header_3_meeting_left_txt {
+    max-width: 100%;
+  }
+}
+
+/* Ipad pro */
+@media only screen and (max-width: 991px) {
+  ._log_in {
+    margin: 10px 0;
+  }
+
+  ._header_3_meeting_nav_item_wrap {
+    margin: 10px 0;
+  }
+
+  ._header_3_meeting_inner_wrap {
+    padding: 30px 0 0;
+  }
+
+  ._header_3_meeting_left_wrap {
+    text-align: center;
+  }
+
+  ._header_3_meeting_btn_wrap {
+    justify-content: center;
+  }
+
+  ._header_3_meeting_right_wrap {
+    margin: 30px 0 0;
+  }
+}
+
+/* Ipad/Mobile L */
+@media only screen and (max-width: 767px) {
+}
+
+/* Mobile */
+@media only screen and (max-width: 575px) {
+  ._header_3_meeting_right_abs {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  ._header_3_meeting_left_title {
+    font-size: 32px;
+  }
+
+  ._header_3_meeting_left_txt {
+    font-size: 14px;
+  }
+
+  ._header_3_meeting_btn_wrap {
+    flex-direction: column;
+  }
+
+  ._header_3_meeting_btn2 {
+    margin: 20px 0 0 0;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+}
+
+/* header ends */
